--- a/index.html
+++ b/index.html
@@ -251,6 +251,6 @@
       getWizardY(300);
     </script>
     <script src="js/game.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/stat.js"></script>
   </body>
 </html>
