--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <title>Код и Магия</title>
   </head>
-  <body>
     <header>
       <svg
         style="display: none"
@@ -80,7 +79,7 @@
       <div class="demo"></div>
 
       <div class="setup-open">
-        <img src="./img/user-1.jpg" class="setup-open-icon" />
+        <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0" />
       </div>
     </header>
 
@@ -109,7 +108,7 @@
             </label>
           </div>
 
-          <span class="setup-close">&times;</span>
+          <span class="setup-close" tabindex="0">&times;</span>
         </div>
 
         <div class="setup-artifacts-shop">
