--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
               <input
                 type="text"
                 name="username"
+                minlength="2"
                 maxlength="25"
                 required
                 class="setup-user-name"
