--- a/index.html
+++ b/index.html
@@ -253,5 +253,6 @@
     <script src="js/game.js"></script>
     <script src="js/stat.js"></script>
     <script src="js/setup.js"></script>
+    <script src="js/dialog.js"></script>
   </body>
 </html>
