--- a/index.html
+++ b/index.html
@@ -238,8 +238,7 @@
       var wizardSpeed = 3;
       var wizardWidth = 70;
       var getWizardHeight = function () {
-        return 1.337 * wizardWidth;
-      };
+        return 1.337 * wizardWidth     };
       var getWizardX = function (width) {
         return width / 2 - wizardWidth / 2;
       };
