--- a/js/lection/lection_5.html
+++ b/js/lection/lection_5.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="../lection/lection_5.css" />
   </head>
   <body>
-    <div class="drag-me"></div>
+    <div class="div">
+      <button value="1">Мышка-норушка</button>
+      <button value="2">Лягушка-квакушка</button>
+    </div>
+
     <script src="../lection/lection_5.js"></script>
   </body>
 </html>
